--- a/README
+++ b/README
@@ -192,7 +192,7 @@ Creating packages on debian (ubuntu, ...):
    get the source: 
    $ git clone https://github.com/sems-server/sems.git
 
-   $ cd sems; ln -s pkg/deb/buster ./debian
+   $ cd sems; ln -s pkg/deb/debian ./debian
 
    set version in changelog if not correct
    $ dch -v x.y.z "SEMS x.y.z release"
